# spam-filter

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  providers.json  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ensure-graph-subscription.yml
scripts/: BlockDeletedSendersAndBackup.ps1  RestoreBlockedSendersFromBackup.ps1
spam_filter/: __init__.py  app.py  classifier.py  config.py  database.py  graph.py  models.py  providers.py  service.py
tests/: test_app_helpers.py  test_classifier.py  test_database.py  test_graph.py  test_policy.py  test_service.py
