[project]
name = "outlook-ai-spam-filter"
version = "0.1.0"
description = "Cloud webhook service that rescues legitimate login-code mail from Outlook Junk Email."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.65.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]
